Fix form elements on mobile webkit

--- a/assets/stylesheets/dom-limpio/_forms.scss
+++ b/assets/stylesheets/dom-limpio/_forms.scss
@@ -18,6 +18,7 @@ textarea {
   font: inherit;
   margin: 0;
   border-radius: 0;
+  -webkit-appearance: none;
 }
 
 input, select {
